src/emit/snapshots/hugr_llvm__emit__test__emit_hugr_call@llvm14.snap
---
source: src/emit/test.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define void @_hl.main_void.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  call void @_hl.main_void.1()
  ret void
}

define { {}, {} } @_hl.main_unary.5({ {}, {} } %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = call { {}, {} } @_hl.main_unary.5({ {}, {} } %0)
  ret { {}, {} } %1
}

define { { {}, {} }, { {}, {} } } @_hl.main_binary.9({ {}, {} } %0, { {}, {} } %1) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %2 = call { { {}, {} }, { {}, {} } } @_hl.main_binary.9({ {}, {} } %0, { {}, {} } %1)
  %mrv = insertvalue { { {}, {} }, { {}, {} } } undef, { {}, {} } %0, 0
  %mrv7 = insertvalue { { {}, {} }, { {}, {} } } %mrv, { {}, {} } %1, 1
  ret { { {}, {} }, { {}, {} } } %mrv7
}
