src/emit/snapshots/hugr_llvm__emit__test__emit_hugr_conditional@pre-mem2reg@llvm14.snap
---
source: src/emit/test.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { { { { {}, {} } }, { { i32, {} } }, { { i32 } } }, { i32, {} } } @_hl.main.1({ { { i32 } }, { { i32, {} } }, { { {}, {} } } } %0, { i32, {} } %1) {
alloca_block:
  %"0" = alloca { { { {}, {} } }, { { i32, {} } }, { { i32 } } }, align 8
  %"1" = alloca { i32, {} }, align 8
  %"2_0" = alloca { { { i32 } }, { { i32, {} } }, { { {}, {} } } }, align 8
  %"2_1" = alloca { i32, {} }, align 8
  %"4_0" = alloca { { { {}, {} } }, { { i32, {} } }, { { i32 } } }, align 8
  %"4_1" = alloca { i32, {} }, align 8
  %"03" = alloca { { { {}, {} } }, { { i32, {} } }, { { i32 } } }, align 8
  %"14" = alloca { i32, {} }, align 8
  %"07" = alloca { i32 }, align 8
  %"18" = alloca { i32, {} }, align 8
  %"6_0" = alloca { i32 }, align 8
  %"6_1" = alloca { i32, {} }, align 8
  %"8_0" = alloca { { { {}, {} } }, { { i32, {} } }, { { i32 } } }, align 8
  %"014" = alloca { i32, {} }, align 8
  %"115" = alloca { i32, {} }, align 8
  %"10_0" = alloca { i32, {} }, align 8
  %"10_1" = alloca { i32, {} }, align 8
  %"12_0" = alloca { { { {}, {} } }, { { i32, {} } }, { { i32 } } }, align 8
  %"021" = alloca { {}, {} }, align 8
  %"122" = alloca { i32, {} }, align 8
  %"14_0" = alloca { {}, {} }, align 8
  %"14_1" = alloca { i32, {} }, align 8
  %"16_0" = alloca { { { {}, {} } }, { { i32, {} } }, { { i32 } } }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { { { i32 } }, { { i32, {} } }, { { {}, {} } } } %0, { { { i32 } }, { { i32, {} } }, { { {}, {} } } }* %"2_0", align 4
  store { i32, {} } %1, { i32, {} }* %"2_1", align 4
  %"2_01" = load { { { i32 } }, { { i32, {} } }, { { {}, {} } } }, { { { i32 } }, { { i32, {} } }, { { {}, {} } } }* %"2_0", align 4
  %"2_12" = load { i32, {} }, { i32, {} }* %"2_1", align 4
  %2 = extractvalue { { { i32 } }, { { i32, {} } }, { { {}, {} } } } %"2_01", 0
  %3 = extractvalue { { i32 } } %2, 0
  store { i32 } %3, { i32 }* %"07", align 4
  store { i32, {} } %"2_12", { i32, {} }* %"18", align 4
  %4 = extractvalue { { { i32 } }, { { i32, {} } }, { { {}, {} } } } %"2_01", 1
  %5 = extractvalue { { i32, {} } } %4, 0
  store { i32, {} } %5, { i32, {} }* %"014", align 4
  store { i32, {} } %"2_12", { i32, {} }* %"115", align 4
  %6 = extractvalue { { { i32 } }, { { i32, {} } }, { { {}, {} } } } %"2_01", 2
  %7 = extractvalue { { {}, {} } } %6, 0
  store { {}, {} } %7, { {}, {} }* %"021", align 1
  store { i32, {} } %"2_12", { i32, {} }* %"122", align 4
  switch i32 0, label %cond_4_case_0 [
    i32 1, label %cond_4_case_1
    i32 2, label %cond_4_case_2
  ]

cond_4_case_0:                                    ; preds = %entry_block
  %"09" = load { i32 }, { i32 }* %"07", align 4
  %"110" = load { i32, {} }, { i32, {} }* %"18", align 4
  store { i32 } %"09", { i32 }* %"6_0", align 4
  store { i32, {} } %"110", { i32, {} }* %"6_1", align 4
  %"6_011" = load { i32 }, { i32 }* %"6_0", align 4
  %8 = insertvalue { { i32 } } undef, { i32 } %"6_011", 0
  %9 = insertvalue { { { {}, {} } }, { { i32, {} } }, { { i32 } } } poison, { { i32 } } %8, 2
  store { { { {}, {} } }, { { i32, {} } }, { { i32 } } } %9, { { { {}, {} } }, { { i32, {} } }, { { i32 } } }* %"8_0", align 4
  %"8_012" = load { { { {}, {} } }, { { i32, {} } }, { { i32 } } }, { { { {}, {} } }, { { i32, {} } }, { { i32 } } }* %"8_0", align 4
  %"6_113" = load { i32, {} }, { i32, {} }* %"6_1", align 4
  store { { { {}, {} } }, { { i32, {} } }, { { i32 } } } %"8_012", { { { {}, {} } }, { { i32, {} } }, { { i32 } } }* %"03", align 4
  store { i32, {} } %"6_113", { i32, {} }* %"14", align 4
  br label %cond_exit_4

cond_4_case_1:                                    ; preds = %entry_block
  %"016" = load { i32, {} }, { i32, {} }* %"014", align 4
  %"117" = load { i32, {} }, { i32, {} }* %"115", align 4
  store { i32, {} } %"016", { i32, {} }* %"10_0", align 4
  store { i32, {} } %"117", { i32, {} }* %"10_1", align 4
  %"10_018" = load { i32, {} }, { i32, {} }* %"10_0", align 4
  %10 = insertvalue { { i32, {} } } undef, { i32, {} } %"10_018", 0
  %11 = insertvalue { { { {}, {} } }, { { i32, {} } }, { { i32 } } } poison, { { i32, {} } } %10, 1
  store { { { {}, {} } }, { { i32, {} } }, { { i32 } } } %11, { { { {}, {} } }, { { i32, {} } }, { { i32 } } }* %"12_0", align 4
  %"12_019" = load { { { {}, {} } }, { { i32, {} } }, { { i32 } } }, { { { {}, {} } }, { { i32, {} } }, { { i32 } } }* %"12_0", align 4
  %"10_120" = load { i32, {} }, { i32, {} }* %"10_1", align 4
  store { { { {}, {} } }, { { i32, {} } }, { { i32 } } } %"12_019", { { { {}, {} } }, { { i32, {} } }, { { i32 } } }* %"03", align 4
  store { i32, {} } %"10_120", { i32, {} }* %"14", align 4
  br label %cond_exit_4

cond_4_case_2:                                    ; preds = %entry_block
  %"023" = load { {}, {} }, { {}, {} }* %"021", align 1
  %"124" = load { i32, {} }, { i32, {} }* %"122", align 4
  store { {}, {} } %"023", { {}, {} }* %"14_0", align 1
  store { i32, {} } %"124", { i32, {} }* %"14_1", align 4
  %"14_025" = load { {}, {} }, { {}, {} }* %"14_0", align 1
  %12 = insertvalue { { {}, {} } } undef, { {}, {} } %"14_025", 0
  %13 = insertvalue { { { {}, {} } }, { { i32, {} } }, { { i32 } } } poison, { { {}, {} } } %12, 0
  store { { { {}, {} } }, { { i32, {} } }, { { i32 } } } %13, { { { {}, {} } }, { { i32, {} } }, { { i32 } } }* %"16_0", align 4
  %"16_026" = load { { { {}, {} } }, { { i32, {} } }, { { i32 } } }, { { { {}, {} } }, { { i32, {} } }, { { i32 } } }* %"16_0", align 4
  %"14_127" = load { i32, {} }, { i32, {} }* %"14_1", align 4
  store { { { {}, {} } }, { { i32, {} } }, { { i32 } } } %"16_026", { { { {}, {} } }, { { i32, {} } }, { { i32 } } }* %"03", align 4
  store { i32, {} } %"14_127", { i32, {} }* %"14", align 4
  br label %cond_exit_4

cond_exit_4:                                      ; preds = %cond_4_case_2, %cond_4_case_1, %cond_4_case_0
  %"05" = load { { { {}, {} } }, { { i32, {} } }, { { i32 } } }, { { { {}, {} } }, { { i32, {} } }, { { i32 } } }* %"03", align 4
  %"16" = load { i32, {} }, { i32, {} }* %"14", align 4
  store { { { {}, {} } }, { { i32, {} } }, { { i32 } } } %"05", { { { {}, {} } }, { { i32, {} } }, { { i32 } } }* %"4_0", align 4
  store { i32, {} } %"16", { i32, {} }* %"4_1", align 4
  %"4_028" = load { { { {}, {} } }, { { i32, {} } }, { { i32 } } }, { { { {}, {} } }, { { i32, {} } }, { { i32 } } }* %"4_0", align 4
  %"4_129" = load { i32, {} }, { i32, {} }* %"4_1", align 4
  store { { { {}, {} } }, { { i32, {} } }, { { i32 } } } %"4_028", { { { {}, {} } }, { { i32, {} } }, { { i32 } } }* %"0", align 4
  store { i32, {} } %"4_129", { i32, {} }* %"1", align 4
  %"030" = load { { { {}, {} } }, { { i32, {} } }, { { i32 } } }, { { { {}, {} } }, { { i32, {} } }, { { i32 } } }* %"0", align 4
  %"131" = load { i32, {} }, { i32, {} }* %"1", align 4
  %mrv = insertvalue { { { { {}, {} } }, { { i32, {} } }, { { i32 } } }, { i32, {} } } undef, { { { {}, {} } }, { { i32, {} } }, { { i32 } } } %"030", 0
  %mrv32 = insertvalue { { { { {}, {} } }, { { i32, {} } }, { { i32 } } }, { i32, {} } } %mrv, { i32, {} } %"131", 1
  ret { { { { {}, {} } }, { { i32, {} } }, { { i32 } } }, { i32, {} } } %mrv32
}
