src/emit/snapshots/hugr_llvm__emit__test__emit_hugr_load_constant@llvm14.snap
---
source: src/emit/test.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i32, { { {}, {}, {}, {} }, i16 } } @_hl.main.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  ret { i32, { { {}, {}, {}, {} }, i16 } } { i32 0, { { {}, {}, {}, {} }, i16 } { { {}, {}, {}, {} } { {} poison, {} poison, {} undef, {} poison }, i16 -24 } }
}
