src/emit/snapshots/hugr_llvm__emit__test__emit_hugr_load_constant@pre-mem2reg@llvm14.snap
---
source: src/emit/test.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i32, { { {}, {}, {}, {} }, i16 } } @_hl.main.1() {
alloca_block:
  %"0" = alloca { i32, { { {}, {}, {}, {} }, i16 } }, align 8
  %"5_0" = alloca { i32, { { {}, {}, {}, {} }, i16 } }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { i32, { { {}, {}, {}, {} }, i16 } } { i32 0, { { {}, {}, {}, {} }, i16 } { { {}, {}, {}, {} } { {} poison, {} poison, {} undef, {} poison }, i16 -24 } }, { i32, { { {}, {}, {}, {} }, i16 } }* %"5_0", align 4
  %"5_01" = load { i32, { { {}, {}, {}, {} }, i16 } }, { i32, { { {}, {}, {}, {} }, i16 } }* %"5_0", align 4
  store { i32, { { {}, {}, {}, {} }, i16 } } %"5_01", { i32, { { {}, {}, {}, {} }, i16 } }* %"0", align 4
  %"02" = load { i32, { { {}, {}, {}, {} }, i16 } }, { i32, { { {}, {}, {}, {} }, i16 } }* %"0", align 4
  ret { i32, { { {}, {}, {}, {} }, i16 } } %"02"
}
